AX: when aria-activedescendant is used with a ComboBox role, focus should not be changed https://bugs.webkit.org/show_bug.cgi?id=108596

Reviewed by Ryosuke Niwa.

Source/WebCore:

Normally, an aria-activedescendant change causes a focus change to be triggered.
However, when used in conjunction with a combo box, this causes problems for screen readers.
Namely, the user expects focus to remain in the text field so that the user can keep typing.
If focus moves to an item in the combobox list, it is not possible to keep typing.

The solution is to not trigger a focus change in this case and instead use a selected children change notification.

Test: platform/mac/accessibility/combobox-activedescendant-notifications.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::shouldNotifyActiveDescendant):
(WebCore::AccessibilityRenderObject::shouldFocusActiveDescendant):
(WebCore::AccessibilityRenderObject::handleActiveDescendantChanged):
* accessibility/AccessibilityRenderObject.h:
(AccessibilityRenderObject):
* accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::postPlatformNotification):

LayoutTests:

* platform/mac/accessibility/combobox-activedescendant-notifications-expected.txt: Added.
* platform/mac/accessibility/combobox-activedescendant-notifications.html: Added.



Canonical link: https://commits.webkit.org/126825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141560 268f45cc-cd09-0410-ab3c-d52691b4dbfc